Added algorithm to prevent clumping of energy chunks in the solar panel.
Fixed issue where the energy chunks would clump up as they emerged from the teapot.
Fixed issue where the "hidden" energy chunks were not being removed from generator on deactivation or reset.
Fixed issue where reset on 2nd tab wasn't clearing steam from beaker.
Fixed an issue where the beaker on the 2nd tab was unable to make it all the way to the boiling point.
Changed the background colors to be consistent on both tabs.
Fixed an issue where energy chunks would appear to "thin out" at the surface of the water when boiling occurred.
Prevented energy chunks from moving through walls of the beaker when emitted from the water.
Made the energy chunks that are emitted to the air come from a random location towards the top of the energy container, and not always from the center top.
Added ability to sense the temperature of the steam emitted from the beaker when it is at or near boiling.
# 0.00.32 (71853) Jan 24, 2013
1/24/13 Deploy to dev for review.
Made temperature of ice in bucket equal the freezing point of water, since now the min temperature is limited to that value.
Removed freezing of the water.
Added a production rate and associated calculations for steam so that fast forward will work.
Made steam go away on reset.
Fixed issues with z-order and steam.
Changed implementation of steam coming from the beaker when water boils.
# 0.00.31 (71741) Jan 16, 2013
1/16/13 Deploying to dev for review by dev team.
Changed the background color.
Changed the thermometer to appear to fill up all the way to the top when the temperature of the measured object exceeds the thermometer's range.
Modified the thermometer to have one tick below the freezing point, one tick above the freezing point, and 10 increments between boiling and freezing.
Added flecks to the ice in an attempt to make it look more ice-like.
Added a representation for steam from the boiling water.
# 0.00.30 (71651) Jan 11, 2013